--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <!-- Signup-->
        
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><marquee behavior="" direction=""><a class="navbar-brand font-effect-fire" href="#page-top" style="font-size: 92px;">Rest In The Father, Jesus, And The Holy Ghost</a></marquee></footer>
+        <footer class="footer bg-black small text-center text-white-50"><marquee behavior="" direction=""><a class="navbar-brand font-effect-fire" href="#page-top" style="font-size: 92px;">This Has Been Hammocks In Hawaii</a></marquee></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
